# fdm-edl

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  mkdocs.yml  package-lock.json  package.json  properdocs.yml  pyproject.toml  update_docs.sh
.github/workflows/: deploy-docs-ghpages.yml  test_python.yml
docs/: CHANGELOG.md  gen_reference.py  generate_api_docs.py  index.md  tmp.md
docs/.vitepress/: config.mts
docs/agents/: AGENTS.md  todo.md
docs/api/: bc.md  operators.md  solver.md  utils.md
docs/api/edl/: electrode.md  electrolyte.md  system.md
docs/docs/: config_params.md  index.md
docs/docs/development/: index.md
docs/docs/examples/: index.md
docs/public/api/: fdm_edl.html  index.html  search.js
docs/public/api/fdm_edl/: _version.html  api.html  benchmark.html  isotherm.html  models.html  op.html  solver.html  utils.html
docs/reference/: fdm_edl.md  index.md
examples/00.1D-PB_analytical/: gcs.ipynb  input.json  linear_pb.ipynb  non-linear_pb.ipynb
examples/00.1d_edl/: input.json  run.ipynb
examples/01.bikerman/: booth.txt  input_booth.json  input_uniform.json  run.ipynb  run.py  uniform.txt
examples/1d-benchmark/: input.json  linear_pb.ipynb  non-linear_pb.ipynb
src/fdm_edl/: __init__.py  _constants.py
src/fdm_edl/api/: __init__.py  bc.py  edl.py  electrode.py  electrolyte.py
src/fdm_edl/bc/: __init__.py  base.py  neumann.py  periodic.py  robin.py  stern.py
src/fdm_edl/benchmark/: __init__.py  base.py  gcs1d.py  pb1d.py
src/fdm_edl/edl/: __init__.py  electrode.py  electrolyte.py  models.py  system.py
src/fdm_edl/grad/: __init__.py  base.py  finite_difference.py  finite_volume.py
src/fdm_edl/isotherm/: __init__.py  base.py  frumkin.py  langmuir.py
src/fdm_edl/mesh/: __init__.py  base.py  line.py
src/fdm_edl/models/: __init__.py  base.py  bikerman.py  boltzmann.py
src/fdm_edl/models/solvent/: __init__.py  base.py  booth.py  langevin.py
src/fdm_edl/op/: __init__.py  base.py
src/fdm_edl/op/axisymmetric/: fd.py  fv.py
src/fdm_edl/op/cartesian/: fd.py  fv.py
src/fdm_edl/operators/: __init__.py  laplacian.py
src/fdm_edl/solver/: __init__.py  base.py  naive_newton.py  newton.py  optax_solver.py  scipy.py  solver.py  test.py
src/fdm_edl/solver/grad/: __init__.py  base.py  conservative_flux.py  laplacian.py
src/fdm_edl/test/: __init__.py  pb1d.py
src/fdm_edl/utils/: __init__.py  bc.py  constants.py  database.py  geometry.py  grad.py  io.py  langevin.py  output.py  output_def.py  unit_conversion.py  utils.py
tests/: _test_z-z_gcs.py  demo.py  test_gcs_solution.py  test_grad.py  test_langevin_water.py  test_nonlinear_pb.py  test_nonlinear_pb_solution.py  test_solver.py  test_water_eps.py
tests/data/: CaSO4.json  NaCl.json  NaCl_booth.json  NaCl_gcs.json  NaCl_langevin.json
